Mobile: polish border radius for pokedex, fix spacing in search type buttons.

--- a/flaskr/static/css/main.css
+++ b/flaskr/static/css/main.css
@@ -466,8 +466,9 @@ h1 {
         margin: 0 auto;
         padding: .5rem 0;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
+        gap: 10px;
     }
 
     .pokemon-data-container {
@@ -660,7 +661,7 @@ button[type="submit"]:hover, button[type="submit"]:focus {
         width: 100%;
         margin: 0;
         padding: 10px;
-        border-radius: 0;
+        border-radius: 20px;
     }
 
     .pokedex-screen {
@@ -687,6 +688,7 @@ button[type="submit"]:hover, button[type="submit"]:focus {
     .search-buttons-container {
         width: 90%;
         margin: 10px auto;
+        gap: 10px;
     }
 
     .search-button {
